msgid "VLAN add successfull"
msgstr ""

#: site/admin/manageVLANEditresult.php
msgid "VLAN edit successfull"
msgstr ""

#: site/admin/manageVLANEditresult.php
msgid "VLAN delete successfull"
msgstr ""

#: site/admin/manageVRFEditResult.php
msgid "Failed to add VRF"
msgstr ""

#: site/admin/manageVRFEditResult.php
msgid "Failed to edit VRF"
msgstr ""

#: site/admin/manageVRFEditResult.php
msgid "Failed to delete VRF"
msgstr ""

#: site/admin/manageVRFEditResult.php
msgid "VRF add successfull"
msgstr ""

#: site/admin/manageVRFEditResult.php
msgid "VRF edit successfull"
msgstr ""

#: site/admin/manageVRFEditResult.php
msgid "VRF delete successfull"
msgstr ""

#: site/admin/customIPFieldsEditResult.php
#: site/admin/customSubnetFieldsEditResult.php
#: site/admin/customVLANFieldsEditResult.php
#: site/admin/customUserFieldsEditResult.php
msgid "Failed to add field"
msgstr ""

#: site/admin/customIPFieldsEditResult.php
#: site/admin/customSubnetFieldsEditResult.php
#: site/admin/customVLANFieldsEditResult.php
#: site/admin/customUserFieldsEditResult.php
msgid "Failed to edit field"
msgstr ""

#: site/admin/customIPFieldsEditResult.php
#: site/admin/customSubnetFieldsEditResult.php
#: site/admin/customVLANFieldsEditResult.php
#: site/admin/customUserFieldsEditResult.php
msgid "Failed to delete field"
msgstr ""

#: site/admin/customIPFieldsEditResult.php
#: site/admin/customSubnetFieldsEditResult.php
#: site/admin/customVLANFieldsEditResult.php
#: site/admin/customUserFieldsEditResult.php
msgid "Field add success"
msgstr ""

#: site/admin/customIPFieldsEditResult.php
#: site/admin/customSubnetFieldsEditResult.php
#: site/admin/customVLANFieldsEditResult.php
#: site/admin/customUserFieldsEditResult.php
msgid "Field edit success"
msgstr ""

#: site/admin/customIPFieldsEditResult.php
#: site/admin/customSubnetFieldsEditResult.php
#: site/admin/customVLANFieldsEditResult.php
#: site/admin/customUserFieldsEditResult.php
msgid "Field delete success"
msgstr ""